adding style done

--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Second testing website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    <h1>Hi I am Yasir Arafat . Front End web developer Learner</h1>
+    <header>
+        <h1>Hi I am Yasir Arafat . Front End web developer Learner</h1>
+    </header>
+    <main>
+        <div>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod sint, odio asperiores numquam perferendis dicta rerum fugit repudiandae blanditiis sapiente omnis quidem ab reprehenderit? Delectus asperiores voluptatum accusamus! Neque molestias in accusantium aliquam animi nobis sed dolore perferendis officiis dolorem amet, blanditiis ratione laborum error, tempora omnis recusandae eius maxime!</p>
+        </div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
