My Third commit Done

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Second testing website</title>
     <link rel="stylesheet" href="styles/blog.css">
+    <style>
+        h1{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -12,6 +17,15 @@
     </header>
     <main>
         <div>
+            <h3>My First Blog</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod sint, odio asperiores numquam perferendis dicta rerum fugit repudiandae blanditiis sapiente omnis quidem ab reprehenderit? Delectus asperiores voluptatum accusamus! Neque molestias in accusantium aliquam animi nobis sed dolore perferendis officiis dolorem amet, blanditiis ratione laborum error, tempora omnis recusandae eius maxime!</p>
+        </div>
+        <div>
+            <h3>My Second Blog</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod sint, odio asperiores numquam perferendis dicta rerum fugit repudiandae blanditiis sapiente omnis quidem ab reprehenderit? Delectus asperiores voluptatum accusamus! Neque molestias in accusantium aliquam animi nobis sed dolore perferendis officiis dolorem amet, blanditiis ratione laborum error, tempora omnis recusandae eius maxime!</p>
+        </div>
+        <div>
+            <h3>My Third Blog</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod sint, odio asperiores numquam perferendis dicta rerum fugit repudiandae blanditiis sapiente omnis quidem ab reprehenderit? Delectus asperiores voluptatum accusamus! Neque molestias in accusantium aliquam animi nobis sed dolore perferendis officiis dolorem amet, blanditiis ratione laborum error, tempora omnis recusandae eius maxime!</p>
         </div>
     </main>
