4th commit done

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
             <h3>My Third Blog</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quod sint, odio asperiores numquam perferendis dicta rerum fugit repudiandae blanditiis sapiente omnis quidem ab reprehenderit? Delectus asperiores voluptatum accusamus! Neque molestias in accusantium aliquam animi nobis sed dolore perferendis officiis dolorem amet, blanditiis ratione laborum error, tempora omnis recusandae eius maxime!</p>
         </div>
+        <div>
+            <h2>How to push the HTML & CSS code GitHum</h2>
+            <ul >
+                <li>Command-1: git add .</li>
+                <li>command-2: git commit -m"Give a valid message"</li>
+                <li>command-3 : git push</li>
+            </ul>
+        </div>
     </main>
     <footer>
 
